Pascal/test/cohadar/pascal/errors/index_type.pas
program test;
var a: array[0..1] of integer;

begin
	a[false] := 3;
end.